--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,27 @@
+---
 version: '3'
 
 services:
   app:
-    build: .
-    ports: 
+    build:
+      context: .
+      dockerfile: ./docker/golang/Dockerfile
+    ports:
       - "8080:8080"
     command: ./main
+    depends_on:
+      - db
+  db:
+    build:
+      context: .
+      dockerfile: ./docker/postgres/Dockerfile
+    environment:
+      - POSTGRES_USER=app
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=routine
+    volumes:
+      - db-data:/var/lib/postgresql/data
+    ports:
+      - "9999:5432"
+volumes:
+  db-data:
