--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,17 @@ services:
       - POSTGRES_DB=routine
     volumes:
       - db-data:/var/lib/postgresql/data
+  front:
+    build:
+      context: .
+      dockerfile: ./docker/node/Dockerfile
+    environment:
+      - NODE_ENV=development
+    volumes:
+      - ./front:/usr/src/app
+    stdin_open: true
     ports:
-      - "9999:5432"
+      - "3009:3000"
+    command: sh -c "yarn start"
 volumes:
   db-data:
