--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,18 +7,29 @@ events {
 http {
   server {
     listen 8080;
-    server_name localhost;
     location / {
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
       proxy_set_header Host $host;
-      proxy_pass http://app:8080;
+      proxy_pass http://app:8081;
 
       add_header Access-Control-Allow-Origin *;
-      add_header Access-Control-Allow-Methods "POST, GET, OPTIONS";
-      add_header Access-Control-Allow-Headers "Origin, Authorization, Accept";
-      add_header Access-Control-Allow-Credentials true;
+      add_header Access-Control-Allow-Methods "POST, GET, DELETE, OPTIONS";
+      add_header Access-Control-Allow-Headers "X-Requested-With, Origin, X-Csrftoken, Content-Type, Accept";
+
+      # preflight対応
+      if ($request_method = 'OPTIONS') {
+        add_header Access-Control-Allow-Origin *;
+        add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS';
+        add_header Access-Control-Allow-Headers '*';
+        add_header Access-Control-Max-Age 7200;
+
+        add_header Content-Type 'text/plain charset=UTF-8';
+        add_header Content-Length 0;
+
+        return 204;
+      }
     }
   }
 }
